[workspace]
resolver = "2"
members = ["executor", "plugin"]

[workspace.dependencies]
common_x = { version = "0.3", default-features = false }

clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
wasmtime = "20.0"
wasi-common = "20.0"

[profile.dev]
debug = 0
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
